add_relation Message in Console with certain shaders #66370

Closed
opened 2019-07-03 12:48:18 +02:00 by Sebastian Koenig · 3 comments

System Information
Operating system: Linux-4.4.0-151-generic-x86_64-with-debian-stretch-sid 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 14:04, hash: 57c26453f8

Short description of error
When using Object in Texture Coordinates sometime I get messages like this in the Console output:
add_relation(Object Geometry -> Node) - Could not find op_from (ComponentKey(OBHLP_center.003, GEOMETRY))
add_relation(Object Geometry -> Node) - Failed, but op_to (ComponentKey(NTShader Nodetree, SHADING)) was ok
Depending on how many objects use this kind of setup in the scene the Console output can become quite noisy.

Exact steps for others to reproduce the error
Open this file and check the Console.add_relation.blend

**System Information** Operating system: Linux-4.4.0-151-generic-x86_64-with-debian-stretch-sid 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.26 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-02 14:04, hash: `57c26453f8` **Short description of error** When using Object in Texture Coordinates sometime I get messages like this in the Console output: add_relation(Object Geometry -> Node) - Could not find op_from (ComponentKey(OBHLP_center.003, GEOMETRY)) add_relation(Object Geometry -> Node) - Failed, but op_to (ComponentKey(NTShader Nodetree, SHADING)) was ok Depending on how many objects use this kind of setup in the scene the Console output can become quite noisy. **Exact steps for others to reproduce the error** Open this file and check the Console.[add_relation.blend](https://archive.blender.org/developer/F7563627/add_relation.blend)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k

This issue was referenced by 65b2cc2301

This issue was referenced by 65b2cc2301afcb26cd0eaa1abf17f7e5bc7bd899

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sergey Sharybin self-assigned this 2019-07-03 14:27:56 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66370
No description provided.