Fix T66370: add_relation Message in Console with certain shaders